# QAQC_dashboard

./: .gitignore  Dockerfile  README-vue3-upgrade.md  README.md  create_dashboard.py  create_index.py  dashboardFunctions.py  dashboardPlots-staticSite_currentDraft.ipynb  dashboardPlots-staticSite_currentDraft.py  dashboardPlots.ipynb  decimateFunctions.py  environment.yaml  generateHITLtables.py  package-lock.json  pyproject.toml  vue-3-upgrade-info.md
.ci/: environment.yaml  hydrophone.yaml  ooi-hyd-tools.yaml
.github/: hydrophone_docker.yaml
HITL_notes/: HITL_Platforms_BEP.csv  HITL_Platforms_Deep-Profiler.csv  HITL_Platforms_Seafloor.csv  HITL_Platforms_Shallow-Profiler-200m_Platform.csv  HITL_Platforms_Shallow-Profiler.csv  HITL_Sites_CE04OSBP.csv  HITL_Sites_CE04OSPD.csv  HITL_Sites_CE04OSPS.csv  HITL_Sites_RS01SBPD.csv  HITL_Sites_RS01SBPS.csv  HITL_Sites_RS01SLBS.csv  HITL_Sites_RS01SUM1.csv  HITL_Sites_RS01SUM2.csv  HITL_Sites_RS03ASHS.csv  HITL_Sites_RS03AXBS.csv  HITL_Sites_RS03AXPD.csv  HITL_Sites_RS03AXPS.csv  HITL_Sites_RS03CCAL.csv  HITL_Sites_RS03ECAL.csv  HITL_Sites_RS03INT1.csv  HITL_Sites_RS03INT2.csv  HITL_Stage1_ADCP.csv  HITL_Stage1_BOTPT.csv  HITL_Stage1_CTD.csv  HITL_Stage1_DOFSTA.csv  HITL_Stage1_DOSTA.csv  HITL_Stage1_FLCDR.csv  HITL_Stage1_FLNTU.csv  HITL_Stage1_FLOR.csv  HITL_Stage1_FLORT.csv  HITL_Stage1_NUTNR.csv  HITL_Stage1_PARAD.csv  HITL_Stage1_PCO2W.csv  HITL_Stage1_PHSEN.csv  HITL_Stage1_SPKIR.csv  HITL_Stage1_VELPT.csv  HITL_Stage2_CAMHD.csv  HITL_Stage2_OPTAA.csv  HITL_Stage2_PREST.csv  HITL_Stage2_THSPH.csv  (+19 more)
aws/: .env.example  (+6 more)
(+208 files in other folders)
