[project]
name = "qaqc-dashboard-environment"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rca-data-tools @ git+https://github.com/OOI-CabledArray/rca-data-tools.git",
    "cmocean>=4.0.3,<5",
    "fsspec>=2025.9.0",
    "matplotlib>=3.10.7,<4",
    "rca-data-tools",
    "s3fs>=2025.9.0",
    "scipy>=1.16.2,<2",
    "tqdm>=4.67.1,<5",
    "xarray>=2025.10.1",
    "zarr>=3.1.3,<4",
]
